import java.util.ArrayList;

public class BluetoothIO
{
   /**
    * Returns a list of dongle MAC addresses
    *
    */
    public ArrayList<String> searchDongle(){

    }

    public void selectDongle(String addr){

    }

    public void keyboardInput(String input){

    }

    private void pairDongle(String addr){

    }
}
