public class EditAcctView extends AcctView
{

    public EditAcctView(Account acct){
        super(acct);
    }

    public Account getAccount(){
    }

    public void printAccountName() {
    }


    public void inputAccountName(String accountName) {
        this.accountName = accountName;
    }


    public void printUserName() {
    }


    public void inputUserName(String userName) {
        this.userName = userName;
    }


    public void printPassword() {
    }


    public void inputPassword(String password) {
        this.password = password;
    }


    public void printUrl() {
    }


    public void inputUrl(String url) {
        this.url = url;
    }


    public void printExpires() {
    }


    public void inputExpires(String expires) {
        this.expires = expires;
    }


    public void printNotes() {
    }


    public void inputNotes(String notes) {
        this.notes = notes;
    }

}
