class PassGenView{
    private String pass;
    private boolean capital;
    private boolean special;
    private int length;

    public String getPass(){
        return pass;
    }

    public void inputPass(){

    }

    public void printPass(){

    }

    public void generatePass(){

    }

    public void capitalize(){

    }

    public void specialChars(){
        
    }

    public void setSlider(){
        
    }
}
