public class ReadAcctView extends AcctView
{
   
    public ReadAcctView(Account acct){
        super(acct);
    }


    public void printAccountName() {
    }


    public void printUserName() {
    }


    public void printPassword() {
    }


    public void printUrl() {
    }


    public void printExpires() {
    }


    public void printNotes() {
    }

    public void pressPasswordCopyButton(){
    }

    public void pressAccountCopyButton(){
    }
    
    public void pressEmailCopyButton(){
    }

    public void pressWebsiteCopyButton(){
    }

}
